MODIFY: 일정 반경 내에 들어오면 용사 사망

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div class="container">
+      <div class="reset-wrapper">
+      </div>
       <p class="warning">WARNING!!!</p>
       <div id="bg">
         <img src="/images/bg.png">
