MODIFY: modified path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Enemy Rain</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <div class="container">
@@ -12,7 +12,7 @@
       </div>
       <p class="warning">WARNING!!!</p>
       <div id="bg">
-        <img src="/images/bg.png">
+        <img src="images/bg.png">
       </div>
       <div class="enemy-space">
         <div class="enemy"></div>
