--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Enemy Rain</title>
+    <link rel="shortcut icon" href="images/favicon2.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
