FEATURE: add countdown, add some rules - survive 60sec, bigger enemy area

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="timer-wrapper">
+      <p class="timer">60</p>
+    </div>
     <div class="container">
       <div class="reset-wrapper">
       </div>
@@ -16,7 +19,9 @@
         <img src="images/bg.png">
       </div>
       <div class="enemy-space">
-        <div class="enemy"></div>
+        <div class="enemy-wrapper">
+          <div class="enemy"></div>
+        </div>
       </div>
       <div class="hero"></div>
     </div>
