--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <p class="timer">60</p>
     </div>
     <div class="container">
-      <div class="reset-wrapper">
-      </div>
+      <button class="restart-btn">RESTART</button>
       <p class="warning">WARNING!!!</p>
       <div id="bg">
         <img src="images/bg.png">
