MODIFY: modified title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Enemy Rain</title>
+    <title>Runaway from Ghost</title>
     <link rel="shortcut icon" href="images/favicon2.png" type="image/x-icon">
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
