MODIFY: seperate javascript files, hero module turned class

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <div class="hero"></div>
     </div>
 
-    <script src="main.js"></script>
-    <!-- <script src="/hero.js"></script>
-    <script src="/enemy.js"></script>
-    <script src="/init.js"></script> -->
+    <!-- <script src="main.js"></script> -->
+    <script type="module" src="hero.js"></script>
+    <script type="module" src="enemy.js"></script>
+    <script type="module" src="init.js"></script>
   </body>
 </html>
